# llm_nvcc

./: .gitignore  LICENSE  key.yaml  pyproject.toml
notebook/: LLM_with_HuggingFace.ipynb  LLM_with_LangChain.ipynb  Untitled.ipynb  key.yaml  tokeys.py
src/: config.py  hw.py  keys.py
