[project]
name = "llm-nvcc"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Borges",email = "michaleborges21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ipython (>=9.6.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)"
]

[tool.poetry]
packages = [{include = "llm_nvcc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
