[project]
name = "llm-nvcc"
version = "0.1.0"
description = "Projeto chatbook com modelos variados"
authors = [
    {name = "Michael Borges",email = "michaelborges21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-huggingface (>=1.0.1,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
